base/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "backend-ingress"
  namespace: default
  annotations:
    # Ingress Core Settings
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
     # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    #Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer    
    #alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/health-status
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2' 
spec:
  rules:
    - http:
        paths:
          - path: /contents/*
            backend:
              serviceName: demo-flask-backend
              servicePort: 8080                  
          - path: /services/*
            backend:
             serviceName: demo-nodejs-backend
             servicePort: 8080   
          - path: /*
            backend:
             serviceName: demo-frontend
             servicePort: 80
